Fixing spacing issue beneath index controls

--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,6 +1,6 @@
 .controls {
 	background-color: #f2f2f2;
-	//padding: 1em;
+	margin-bottom: 4em;
 	@include clearfix();
 	
 	form {
